@@ -36,6 +36,11 @@
     <itemizedlist>
       <listitem>
 	<para>
+	  American English
+	</para>
+      </listitem>
+      <listitem>
+	<para>
 	  Azerbaijani 
 	</para>
       </listitem>
@@ -77,11 +82,6 @@
       <listitem>
 	<para>
 	  Dutch 
-	</para>
-      </listitem>
-      <listitem>
-	<para>
-	  English
 	</para>
       </listitem>
       <listitem>
