@@ -1,3 +1,8 @@
+2003-09-05  Danilo Šegan  <dsegan@gmx.net>
+
+	* rni18n.xml: Replaced "English" with "American English"
+	(suggested by Christian Rose).
+
 2003-09-03  John Fleck  <jfleck@inkstain.net>
 
 	* release-notes.xml
